@@ -29,6 +29,7 @@ import org.apache.lucene.codecs.Codec;
 import org.apache.lucene.codecs.lucene3x.Lucene3xSegmentInfoFormat;
 import org.apache.lucene.store.Directory;
 import org.apache.lucene.store.TrackingDirectoryWrapper;
+import org.apache.lucene.util.StringHelper;
 import org.apache.lucene.util.Version;
 
 /**
@@ -58,10 +59,13 @@ public final class SegmentInfo {
 
   private boolean isCompoundFile;
 
+  /** Id that uniquely identifies this segment. */
+  private final String id;
+
   private Codec codec;
 
   private Map<String,String> diagnostics;
-  
+
   /** @deprecated not used anymore */
   @Deprecated
   private Map<String,String> attributes;
@@ -90,7 +94,7 @@ public final class SegmentInfo {
    */
   public SegmentInfo(Directory dir, Version version, String name, int docCount,
       boolean isCompoundFile, Codec codec, Map<String,String> diagnostics) {
-    this(dir, version, name, docCount, isCompoundFile, codec, diagnostics, null);
+    this(dir, version, name, docCount, isCompoundFile, codec, diagnostics, null, null);
   }
 
   /**
@@ -99,7 +103,7 @@ public final class SegmentInfo {
   @Deprecated
   public SegmentInfo(Directory dir, String version, String name, int docCount,
                      boolean isCompoundFile, Codec codec, Map<String,String> diagnostics) {
-    this(dir, Version.parse(version), name, docCount, isCompoundFile, codec, diagnostics, null);
+    this(dir, Version.parse(version), name, docCount, isCompoundFile, codec, diagnostics, null, null);
   }
 
   /**
@@ -108,7 +112,7 @@ public final class SegmentInfo {
   @Deprecated
   public SegmentInfo(Directory dir, String version, String name, int docCount,
                      boolean isCompoundFile, Codec codec, Map<String,String> diagnostics, Map<String,String> attributes) {
-    this(dir, Version.parse(version), name, docCount, isCompoundFile, codec, diagnostics, attributes);
+    this(dir, Version.parse(version), name, docCount, isCompoundFile, codec, diagnostics, attributes, null);
   }
 
   /**
@@ -117,7 +121,8 @@ public final class SegmentInfo {
    * the codecs package.</p>
    */
   public SegmentInfo(Directory dir, Version version, String name, int docCount,
-                     boolean isCompoundFile, Codec codec, Map<String,String> diagnostics, Map<String,String> attributes) {
+                     boolean isCompoundFile, Codec codec, Map<String,String> diagnostics, Map<String,String> attributes,
+                     String id) {
     assert !(dir instanceof TrackingDirectoryWrapper);
     this.dir = dir;
     this.version = version;
@@ -127,6 +132,7 @@ public final class SegmentInfo {
     this.codec = codec;
     this.diagnostics = diagnostics;
     this.attributes = attributes;
+    this.id = id;
   }
 
   /**
@@ -265,6 +271,11 @@ public final class SegmentInfo {
   /** Returns the version of the code which wrote the segment. */
   public Version getVersion() {
     return version;
+  }
+
+  /** Return the id that uniquely identifies this segment. */
+  public String getId() {
+    return id;
   }
 
   private Set<String> setFiles;
