@@ -27,8 +27,8 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
-import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Map;
 import java.util.Set;
 
 import org.apache.lucene.codecs.Codec;
@@ -143,6 +143,9 @@ public final class SegmentInfos implements Cloneable, Iterable<SegmentCommitInfo
   /** The file format version for the segments_N codec header, since 4.9+ */
   public static final int VERSION_49 = 3;
 
+  /** The file format version for the segments_N codec header, since 4.11+ */
+  public static final int VERSION_411 = 4;
+
   // Used for the segments.gen file only!
   // Whenever you add a new format, make it 1 smaller (negative version logic)!
   private static final int FORMAT_SEGMENTS_GEN_47 = -2;
@@ -172,6 +175,9 @@ public final class SegmentInfos implements Cloneable, Iterable<SegmentCommitInfo
    * will be printed here.  @see #setInfoStream.
    */
   private static PrintStream infoStream = null;
+
+  /** Id for this commit; only written starting with Lucene 4.11 */
+  private String id;
 
   /** Sole constructor. Typically you call this and then
    *  use {@link #read(Directory) or
@@ -323,6 +329,12 @@ public final class SegmentInfos implements Cloneable, Iterable<SegmentCommitInfo
                                                  nextGeneration);
   }
 
+  /** Since Lucene 4.11, every commit (segments_N) writes a unique id.  This will
+   *  return that id, or null if this commit was pre-4.11. */
+  public String getId() {
+    return id;
+  }
+
   /**
    * Read a particular segmentFileName.  Note that this may
    * throw an IOException if a commit is in process.
@@ -348,7 +360,7 @@ public final class SegmentInfos implements Cloneable, Iterable<SegmentCommitInfo
       final int actualFormat;
       if (format == CodecUtil.CODEC_MAGIC) {
         // 4.0+
-        actualFormat = CodecUtil.checkHeaderNoMagic(input, "segments", VERSION_40, VERSION_49);
+        actualFormat = CodecUtil.checkHeaderNoMagic(input, "segments", VERSION_40, VERSION_411);
         version = input.readLong();
         counter = input.readInt();
         int numSegments = input.readInt();
@@ -413,6 +425,9 @@ public final class SegmentInfos implements Cloneable, Iterable<SegmentCommitInfo
           add(siPerCommit);
         }
         userData = input.readStringStringMap();
+        if (actualFormat >= VERSION_411) {
+          id = input.readString();
+        }
       } else {
         actualFormat = -1;
         Lucene3xSegmentInfoReader.readLegacyInfos(this, directory, input, format);
@@ -486,7 +501,7 @@ public final class SegmentInfos implements Cloneable, Iterable<SegmentCommitInfo
 
     try {
       segnOutput = directory.createOutput(segmentsFileName, IOContext.DEFAULT);
-      CodecUtil.writeHeader(segnOutput, "segments", VERSION_49);
+      CodecUtil.writeHeader(segnOutput, "segments", VERSION_411);
       segnOutput.writeLong(version); 
       segnOutput.writeInt(counter); // write counter
       segnOutput.writeInt(size()); // write infos
@@ -542,6 +557,7 @@ public final class SegmentInfos implements Cloneable, Iterable<SegmentCommitInfo
         }
       }
       segnOutput.writeStringStringMap(userData);
+      segnOutput.writeString(StringHelper.randomId());
       pendingSegnOutput = segnOutput;
       success = true;
     } finally {
